# clio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  app.py  hypercorn.conf.py  init_packages.py  main.py  pyproject.toml  requirements.txt  setup.py  start.sh
alembic/: env.py
alembic/versions/: 030cf0b0d964_init.py
clio/: __init__.py
clio/context/: globals.py  trace.py  trace_context.py
clio/db/: __init__.py  db_utils.py
clio/decorators/: __init__.py  common.py  input_out_log.py  logger.py
clio/logger/: __init__.py  log.py
clio/orm/: __init__.py  flask_initializer.py  initializer.py  utils.py
clio/pydantics/: __init__.py  pydantics.py
clio/swagger/: __init__.py  config.py  flask_backend.py  spec.py  types.py  utils.py
clio/utils/: __init__.py  dict_util.py  json_util.py  log.py  performance.py  singleton.py
clio/web/: __init__.py  flask.py  http_response.py  quart.py  web_initializer.py
clio/web/context/: __init__.py  ctx.py  errors.py  globals.py  interceptor.py  middleware.py  trace.py  trace_context.py
clio/web/exception/: __init__.py  (+3 more)
clio/workspace/: __init__.py  workspace.py
example/: __init__.py  alembic.ini  app.py  hypercorn.conf.py
example/alembic/: env.py  script.py.mako
example/controller/: test_controller.py
example/database/: database.py  entity.py  models.py
example/resources/: test.http
example/service/: test_service.py
prisma/: schema.prisma
test/: __init__.py  api.py  app.py  database.py
test/controller/: test_controller.py
test/model/: test.py
test/resources/: test.http
(+21 files in other folders)
