[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clio"
version = "0.0.1"
authors = [
    { name = "Rancune", email = "ytongshang@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "simple web framework based on flask"

[project.urls]
"Homepage" = "https://github.com/ytongshang/clio"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '.+/(dist|.venv|venv|build)/.+'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
skip = '''
    .tox
    __pycache__
    *.pyc
    .env
    venv*/*
    .venv/*
    reports/*
    dist/*
'''

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
explicit_package_bases = true
follow_imports = "skip"
check_untyped_defs = "false"
disallow_untyped_defs = "false"
[[tool.mypy.overrides]]
module = [
    "requests",
    "requests.sessions",
]
ignore_missing_imports = true
